added first version of search bar

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,11 @@ http://www.tooplate.com/view/2102-constructive
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='slick/slick-theme.css') }}"/>
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/tooplate-style.css') }}">
 
+	<!-- CSS only -->
+
+
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+
 	<script>
 		var renderPage = true;
 
@@ -96,24 +101,86 @@ http://www.tooplate.com/view/2102-constructive
 
 					<!-- section 2 -->
 					<section id="tm-section-2" class="tm-section tm-section-carousel">
-						<div>
-							<header class="mb-4"><h2 class="tm-text-shadow">ძებნა</h2></header>		            
-							<div class="tm-img-container">
-								<div class="tm-img-slider">
-									<a href="img/gallery-img-01.jpg" class="tm-slider-img"><img src="{{ url_for('static', filename='img/gallery-img-01-tn.jpg') }}" alt="Image" class="img-fluid"></a>
-									<a href="img/gallery-img-02.jpg" class="tm-slider-img"><img src="{{ url_for('static', filename='img/gallery-img-02-tn.jpg') }}" alt="Image" class="img-fluid"></a>
-									<a href="img/gallery-img-03.jpg" class="tm-slider-img"><img src="{{ url_for('static', filename='img/gallery-img-03-tn.jpg') }}" alt="Image" class="img-fluid"></a>
-									<a href="img/gallery-img-04.jpg" class="tm-slider-img"><img src="{{ url_for('static', filename='img/gallery-img-04-tn.jpg') }}" alt="Image" class="img-fluid"></a>
-									<a href="img/gallery-img-05.jpg" class="tm-slider-img"><img src="{{ url_for('static', filename='img/gallery-img-05-tn.jpg') }}" alt="Image" class="img-fluid"></a>
-									<a href="img/gallery-img-06.jpg" class="tm-slider-img"><img src="{{ url_for('static', filename='img/gallery-img-06-tn.jpg') }}" alt="Image" class="img-fluid"></a>
-									<a href="img/gallery-img-06.jpg" class="tm-slider-img"><img src="{{ url_for('static', filename='img/gallery-img-06-tn.jpg') }}" alt="Image" class="img-fluid"></a>
-									<a href="img/gallery-img-06.jpg" class="tm-slider-img"><img src="{{ url_for('static', filename='img/gallery-img-06-tn.jpg') }}" alt="Image" class="img-fluid"></a>
-									<a href="img/gallery-img-06.jpg" class="tm-slider-img"><img src="{{ url_for('static', filename='img/gallery-img-06-tn.jpg') }}" alt="Image" class="img-fluid"></a>
-									<a href="img/gallery-img-06.jpg" class="tm-slider-img"><img src="{{ url_for('static', filename='img/gallery-img-06-tn.jpg') }}" alt="Image" class="img-fluid"></a>
-								</div>
-							</div>		   
+						<div id="main-searchbar">
+							<div id="filter">
+								<img src="{{ url_for('static', filename='img/filter.svg') }}">
+								<span>ფილტრი</span>
+							</div>
 
-						</div>       		          	
+							<div class="dropdown">
+								<div class="filter-option">
+									<span>ჟანრი</span>
+									<img src="{{ url_for('static', filename='img/down-arrow.svg') }}">
+								</div>
+
+								<div class="dropdown-content">
+								  <a href="#">Link 1</a>
+								  <a href="#">Link 2</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								</div>								
+							</div>
+
+							<div class="dropdown">
+								<div class="filter-option">
+									<span>წელი</span>
+									<img src="{{ url_for('static', filename='img/down-arrow.svg') }}">
+								</div>	
+								<div class="dropdown-content">
+								  <a href="#">Link 1</a>
+								  <a href="#">Link 2</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								</div>	
+							</div>
+
+							<div class="dropdown">
+								<div class="filter-option">
+									<span>საკვანძო სიტყვები</span>
+									<img src="{{ url_for('static', filename='img/down-arrow.svg') }}">
+								</div>
+								<div class="dropdown-content">
+								  <a href="#">Link 1</a>
+								  <a href="#">Link 2</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								</div>	 
+							</div>
+
+							<div class="dropdown">
+
+								<div class="filter-option">
+									<span>პერსონაჟები</span>
+									<img src="{{ url_for('static', filename='img/down-arrow.svg') }}">
+								</div>
+								<div class="dropdown-content">
+								  <a href="#">Link 1</a>
+								  <a href="#">Link 2</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								  <a href="#">Link 3</a>
+								</div>								
+							</div>
+						</div>
 					</section>
 
 					<!-- section 3 -->
@@ -213,10 +280,20 @@ http://www.tooplate.com/view/2102-constructive
 		<div id="preload-03"></div>
 		<div id="preload-04"></div>
 
+
 		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
 		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.magnific-popup.min.js') }}"></script>
 		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.backstretch.min.js') }}"></script>
 		<script type="text/javascript" src="{{ url_for('static', filename='slick/slick.min.js')}}"></script> <!-- Slick Carousel -->
+
+
+		<script>
+			document.getElementById("main-searchbar").style.left = document.getElementsByClassName('tm-content')[0].offsetWidth/2 - document.getElementById("main-searchbar").offsetWidth/2 + 'px';
+
+			for(var i = 0; i < document.getElementsByClassName('dropdown').length; i++){
+				document.getElementsByClassName('dropdown-content')[i].style.minWidth = document.getElementsByClassName('dropdown')[i].offsetWidth + 30 + 'px';
+			}
+		</script>
 
 		<script>
 
@@ -373,7 +450,7 @@ http://www.tooplate.com/view/2102-constructive
 		     	$.backstretch("img/" + bgImg, {fade: 500});
 
 		     	// Setup Carousel, Nav, and Nav Toggle
-			    setupCarousel();
+			    //setupCarousel();
 			    setupNav();
 			    setupNavToggle();
 			    setupFooter();
